--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint": "^8.10.0",
     "jest": "^27.5.1",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "yup": "^0.32.11"
   }
 }
