add husky precommit hook for linting and code formating

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
     "moduleResolution": "node",
     "types": ["jest"],
     "noEmit": true,
-    "rootDir": "./src",
+    "rootDir": "./src"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
