--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint src --ext ts,js",
-    "dev": "yarn build --watch --preserveWatchOutput"
+    "lint": "eslint --fix . '*.{ts,js}'",
+    "prettier": "prettier --write ./src '*.{ts,js,md,tsx}'",
+    "dev": "yarn build --watch --preserveWatchOutput",
+    "prepare": "husky install",
+    "lint:prettier": "yarn lint && yarn prettier"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
@@ -18,10 +21,17 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.5",
+    "prettier": "^2.5.1",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "yup": "^0.32.11"
+  },
+  "lint-staged": {
+    "**/*": "yarn lint:prettier"
   }
 }
